--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
                 <div>
                     <img src="imagens/whatsapp32.png" alt="Icone whatsapp"/>
-                    <p><a href="tel:1132280500">(11) 3228-0500</a></p> 
+                    <p><a href="tel:+5511947902921">(11) 947902921</a></p> 
                 </div>
                 <div>
                     <img src="imagens/e-mail.png" alt="Icone email"/>
@@ -244,7 +244,7 @@
                  </div>
                  <div>
                      <img src="imagens/whatsapp32.png" alt="Icone whatsapp"/>
-                     <p><a href="tel:1132280500">(11) 3228-0500</a></p> 
+                     <p><a href="tel:+5511947902921">(11) 947902921</a></p> 
                  </div>
                  <div>
                      <img src="imagens/e-mail.png" alt="icone email"/>
