--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
             <div class="estrategia">
                <img src="imagens/missao.png" alt="Icone sobre missão"/>
                <h2>Missão</h2>
-               <p>Encantar os nossos clientes oferecendo a melhor experiência através da excelência no atendimento e a exclusividada</p>
+               <p>Encantar os nossos clientes oferecendo a melhor experiência através da excelência no atendimento e a exclusividada na seleção dos nossos produtos</p>
             </div>
 
             <div class="missao">
                 <img src="imagens/estrategia.png" alt="Icone sobre estratégia"/>
                 <h2>Visão</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eveniet sint cum aliquam officia odio doloremque reprehenderit omnis consequatur vero! Deleniti ullam libero sapiente doloremque reiciendis quidem dolorum tempore qui!</p>
+                <p>Ser a melhor loja de <br> Cutelaria e Utensílios de <br> Gastronomia do Brasil</p>
             </div>
 
             <div class="valores">
                 <img src="imagens/aperto-de-mao.png" alt="Icone aperto de mão"/>
                 <h2>Valores</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eveniet sint cum aliquam officia odio doloremque reprehenderit omnis consequatur vero! Deleniti ullam libero sapiente doloremque reiciendis quidem dolorum tempore qui!</p>
+                <p>Através da tradição e do comprometimento da equipe, assumimos os princípios herdados com orgulho desde a fundação, mantendo o respeito e a ética em todos os processos, fortalecendo a confiança com todos os nossos parceiros</p>
             </div>
         </section>
 
