--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Rei da Cutelaria</title>
@@ -266,49 +266,49 @@
         <section class="marcas">
             <div class="marcas-bg">
                 <div class="tramontina zoom">
-                    <img src="imagens/victorinox.png" alt="">
+                    <img src="imagens/victorinox.png" alt="Logo Marca Victorinox"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/stanley.png" alt="">
+                    <img src="imagens/stanley.png" alt="Logo Marca Stanley"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/Leatherman.png" alt="">
+                    <img src="imagens/Leatherman.png" alt="Logo Marca Leatherman"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/marcato.png" alt="">
+                    <img src="imagens/marcato.png" alt="Logo Marca Marcato"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/staub.png" alt="">
+                    <img src="imagens/staub.png" alt="Logo Marca Staub"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/tojiro.png" alt="">
+                    <img src="imagens/tojiro.png" alt="Logo Marca Tojiro"/>
+                </div>Logo Marca
+                <div class="tramontina zoom">
+                    <img src="imagens/wusthof.png" alt="Logo Marca Wusthof"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/wusthof.png" alt="">
+                    <img src="imagens/zwilling.png" alt="Logo Marca Zwilling"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/zwilling.png" alt="">
+                    <img src="imagens/tramontina.png" alt="Logo Marca Tramontina"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/tramontina.png" alt="">
+                    <img src="imagens/carborudum.png" alt="Logo Marca Carborudum"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/carborudum.png" alt="">
+                    <img src="imagens/spyderco.png" alt="Logo Marca Spyderco"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/spyderco.png" alt="">
+                    <img src="imagens/naniwa.png" alt="Logo Marca Naniwa"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/naniwa.png" alt="">
+                    <img src="imagens/carborudum.png" alt="Logo Marca Carborudum"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/carborudum.png" alt="">
+                    <img src="imagens/global.png" alt="Logo Marca Global"/>
                 </div>
                 <div class="tramontina zoom">
-                    <img src="imagens/global.png" alt="">
-                </div>
-                <div class="tramontina zoom">
-                    <img src="imagens/mundial.png" alt="">
+                    <img src="imagens/mundial.png" alt="Logo Marca Mundial"/>
                 </div>  
                 <div class="zoom"></div>
             </div>
