Texto sobre o Rei da Cutelaria
O texto sobre a empresa Rei da Cutelaria foi modificado

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h2>A melhor loja de  Cutelaria e </br> Gastronomia do Brasil</h2> -->
 
                     <h3>Sobre nós</h3>
-                    <p>Com mais de meio século de tradição, estamos diante de uma história notável de superação e transformação de uma pequena loja em uma instituição líder na indústria de Cutelaria e Gastronomia em todo o Brasil. </p>
+                    <p>Com mais de meio século de tradição, estamos diante de uma história notável de superação e transformação de uma pequena loja em uma instituição líder na área da Cutelaria e Gastronomia em todo o Brasil.</p>
                 </div>
             </div>
 
